--- a/templates/projets.html
+++ b/templates/projets.html
@@ -518,9 +518,9 @@
                                                 id="projet-poids">1</span>
                                             <span id="projet-statut-detail" style="margin-left: 15px;"></span>
                                             <!-- Added status span -->
-                                            <button class="btn-modifier-poids" id="btn-modifier-poids">
+                                            <!-- <button class="btn-modifier-poids" id="btn-modifier-poids">
                                                 <i class="fas fa-edit"></i> Modifier le poids
-                                            </button>
+                                            </button> -->
                                         </span>
                                     </div>
 
